<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>workspace</artifactId>
    <groupId>com.sap.sailing</groupId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>

	<artifactId>root</artifactId>
	<packaging>pom</packaging>

	<modules>
		<module>com.sap.sailing.domain.common</module>
		<module>com.sap.sailing.domain</module>
		<module>com.sap.sailing.operationaltransformation</module>
		<module>com.sap.sailing.operationaltransformation.test</module>
		<module>com.sap.sailing.geocoding</module>
		<module>com.sap.sailing.geocoding.test</module>
		<module>com.sap.sailing.domain.persistence</module>
		<module>com.sap.sailing.domain.test</module>
		<module>com.sap.sailing.domain.tractracadapter</module>
		<module>com.sap.sailing.domain.tractracadapter.persistence</module>
		<module>com.sap.sailing.domain.swisstimingadapter</module>
		<module>com.sap.sailing.domain.swisstimingadapter.persistence</module>
		<module>com.sap.sailing.domain.swisstimingadapter.test</module>
		<module>com.sap.sailing.declination</module>
		<module>com.sap.sailing.declination.test</module>
		<module>com.sap.sailing.udpconnector</module>
		<module>com.sap.sailing.expeditionconnector</module>
		<module>com.sap.sailing.expeditionconnector.test</module>
		<module>com.sap.sailing.server</module>
		<module>com.sap.sailing.server.replication</module>
		<module>com.sap.sailing.server.replication.test</module>
		<module>com.sap.sailing.www</module>
		<module>com.sap.sailing.www.events</module>
		<module>com.sap.sailing.xcelsiusadapter</module>
		<module>com.sap.sailing.gwt.ui</module>
		<module>com.sap.sailing.gwt.ui.test</module>
		<module>com.google.gwt.osgi</module>
		<module>com.sap.sailing.server.test</module>
		<module>com.sap.sailing.mongodb</module>
		<module>com.sap.sailing.mongodb.test</module>
		<module>com.tractrac.clientmodule</module>
		<module>org.json.simple</module>
		<module>com.mongodb.driver</module>
		<module>com.googlecode.java-diff-utils</module>
		<module>com.googlecode.java-diff-utils.test</module>
		<module>com.sap.sailing.feature</module>
		<module>com.sap.sailing.feature.runtime</module>
		<module>com.sap.sailing.feature.p2build</module>
		<module>org.moxieapps.gwt.highcharts</module>
	</modules>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<tycho-version>0.13.0</tycho-version>
	</properties>

	<build>
		<directory>bin</directory>
		<outputDirectory>bin</outputDirectory>
		<testOutputDirectory>bin</testOutputDirectory>

		<pluginManagement>
			<plugins>
				<plugin>
					<inherited>true</inherited>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>eclipse-test-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.11</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
				<resolver>p2</resolver>
              <target>
                <artifact>
					<groupId>${project.groupId}</groupId>
					<artifactId>${project.artifactId}</artifactId>
					<version>${project.version}</version>
					<classifier>../com.sap.sailing.targetplatform/definitions/race-analysis-p2-maven-central</classifier>
                </artifact>
              </target>
				<environments>
					<environment>
						<os>linux</os>
						<ws>gtk</ws>
						<arch>x86</arch>
					</environment>
					<environment>
						<os>linux</os>
						<ws>gtk</ws>
						<arch>x86_64</arch>
					</environment>
					<environment>
						<os>win32</os>
						<ws>win32</ws>
						<arch>x86</arch>
					</environment>
					<environment>
						<os>win32</os>
						<ws>win32</ws>
						<arch>x86_64</arch>
					</environment>
					<environment>
						<os>macosx</os>
						<ws>cocoa</ws>
						<arch>x86_64</arch>
					</environment>
				</environments>
			  </configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
<!-- non-debug -->
<!-- proxy
					<argLine>-Dfile.encoding=cp1252 -Dhttp.proxyHost=proxy -Dhttp.proxyPort=8080 -Dtractrac.tunnel=true -Dtractrac.tunnel.host=10.18.206.73 -Dmongo.host=10.18.206.73 -Dmongo.dbName=winddbTest -Dreplication.brokerURL=tcp://localhost:61615 -Xmx1024m -XX:PermSize=256m -XX:-UseGCOverheadLimit -XX:+UseParallelGC</argLine>

 -->
<!-- no proxy -->
					<argLine>-Dfile.encoding=cp1252 -Dreplication.brokerURL=tcp://localhost:61615 -Xmx1024m -XX:PermSize=256m -XX:-UseGCOverheadLimit -XX:+UseParallelGC</argLine>
<!-- -->
<!-- debug, proxy
					<argLine>-Dfile.encoding=cp1252 -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y -Dhttp.proxyHost=proxy -Dhttp.proxyPort=8080 -Dmongo.dbName=winddbTest -Dreplication.brokerURL=tcp://localhost:61615 -Xmx1024m -XX:PermSize=256m -XX:-UseGCOverheadLimit -XX:+UseParallelGC</argLine>
-->

<!-- debug, no proxy
					<argLine>-Dfile.encoding=cp1252 -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y -Dmongo.dbName=winddbTest -Dreplication.brokerURL=tcp://localhost:61615 -Xmx1024m -XX:PermSize=256m -XX:-UseGCOverheadLimit -XX:+UseParallelGC</argLine>
 -->

					<excludes>
						<exclude>**/*$*</exclude> <!-- Exclude inner classes -->
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>maven-osgi-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
		</plugins>

    <extensions>
      <!-- Enabling the use of FTP -->
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh-external</artifactId>
         <version>1.0-beta-6</version>
      </extension>
    </extensions>

	</build>
	
	<repositories>
		<repository>
			<id>equinox-sdk-3.7</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/indigo/</url>
		</repository>
<!--		
		<repository>
			<id>sap-nexus</id>
			<url>http://nexus.wdf.sap.corp:8081/nexus/content/groups/build.snapshots</url>
		</repository>
--> 
		<repository>
			<id>central</id>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
 
		<repository>
			<id>uni-luebeck</id>
			<url>http://www.itm.uni-luebeck.de/projects/maven/releases</url>
		</repository>

		<repository>
			<id>sailing-server-maven</id>
			<url>http://sapcoe-app01.pironet-ndh.com/maven</url>
		</repository>
	</repositories>
</project>
